# Credit-Strategy-Ai

./: .gitignore  README.md
apps/web/: README.md  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: CreditDashboardMatrix.tsx
apps/web/lib/: api.ts  supabase.ts
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/src/credit_worker/: cli.py  config.py  db.py  jobs.py  pipeline.py  queue.py  storage_http.py
apps/worker/src/credit_worker/ai/: extract_full_report.py  normalize.py  openai_http.py  recommend.py  report_schema.py
apps/worker/src/credit_worker/db/: schema_notes.md
apps/worker/src/credit_worker/parse/: items.py
apps/worker/src/credit_worker/pdf/: extract.py  real_extract.py
apps/worker/src/credit_worker/storage/: supabase.py
docs/: backend-setup.md
docs/copy/: brand-voice.md  legal.md  seo.md
src/: index.html
src/data/: faq.json  navigation.json  site.json
src/pages/: about.html  contact.html  disclaimer.html  faq.html  pricing.html  privacy.html  services.html  terms.html
src/partials/: footer.html
src/scripts/: main.js
src/scripts/form/: contact.js
src/scripts/utils/: dom.js  validate.js
src/styles/: base.css  tokens.css
src/styles/components/: buttons.css  cards.css  forms.css  nav.css  (+1 more)
supabase/: README.md
supabase/migrations/: 20260225190000_init_backend.sql  20260301220000_add_report_items.sql  20260301233000_ai_recommendations_and_drafts.sql  20260303011000_reports_analysis_json.sql  20260303030000_profiles_and_letter_export.sql
(+30 files in other folders)
